Little Bit of a Janky Visibility Fix
Opacity of thickness set to 0 while transitioning

--- a/static/css/record_viewer.css
+++ b/static/css/record_viewer.css
@@ -10,7 +10,7 @@
     grid-column-start: 3;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
-    z-index: 5;
+    z-index: 1;
     position: relative;
 }
 
@@ -33,7 +33,7 @@
     width: 100%;
     height: 100%;
     transition: transform 2s;
-    z-index: -10;
+    z-index: -1;
 }
 
 #record_container:hover #vinyl_front {
@@ -49,6 +49,11 @@
 #record_container:hover #back_slider {
     transform: translateX(25%);
     -webkit-transform: translateX(25%);
+}
+
+#record_container:hover #jacket_thickness {
+    opacity: 0;
+    transition: opacity 0s;
 }
 
 #record_container {
@@ -72,7 +77,7 @@
     max-height: 50vw;
     background-image: url("../images/templp.png");
     background-size: cover;
-    z-index: -200;
+    z-index: -2;
     transition: transform 2s;
     transform-style: preserve-3d;
     grid-row-start: 1;
@@ -94,7 +99,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     width: .5vh;
-    z-index: -10;
+    z-index: -3;
     transition: 2s;
     transform-origin: 100% 50%;
     transform: rotateY(-90deg);
@@ -202,7 +207,7 @@
     width: 10vh;
     max-width: 10vw;
     margin-left: 10%;
-    z-index: -201;
+    z-index: -4;
     grid-row-start: 1;
     grid-column-start: 5;
     margin: auto;
